Fixed UI bug withthe text not showing up for Login and Register

--- a/client/src/assets/css/Home.css
+++ b/client/src/assets/css/Home.css
@@ -21,11 +21,11 @@
   color: #61dafb;
 }
 
-p{
+.home-p{
   color:white;
 }
 
-h1{
+.home-h1{
   color:white;
 }
 
